Make Trending images smaller to stop the div from overflowing

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+/* FIND OUT WHAT'S GOING ON WITH THE HEIGHT */
+
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
 
 :root {
@@ -294,10 +296,11 @@ main #trendingCardContainer {
 
 main .trendingCard {
     display: flex;
+    padding-left: 10px;
 }
 
 main .trendingCard img {
-    width: 25%;
+    width: 10%;
     margin-right: 10px;
 }
 
